# startups

./: .checkov.yaml  CONTRIBUTING.md  GDPR-COMPLIANCE-DRAFT-PR.md  OWNERS.yaml  PR-106-REVIEW.md  PR-137-REVIEW.md  PR-68-REVIEW.md  PR-DESCRIPTION.md  README.md  atoz-page-updated.md  atoz-page-xwiki.txt  aws-architect-review.md  graviton-migration-reference.md  migration-web-experience-ticket.md  mise.toml  satellite-ai-migration-xwiki.txt  satellite-plugin-guide-xwiki.txt
solution-architecture/clis/bq-assess/: CONTEXT.md  LICENSE  PRIVACY.md  README.md  bandit.yml  pyproject.toml
solution-architecture/clis/bq-assess/.claude-plugin/: plugin.json
solution-architecture/clis/bq-assess/docs/: CLI_REFERENCE.md  MIGRATION_COMPLEXITY_GUIDE.md
solution-architecture/clis/bq-assess/docs/adr/: 0001-iceberg-storage-redshift-as-engine.md  0002-two-scoring-axes.md  0003-partition-mapping-policy.md  0004-per-entity-placement-no-default.md
solution-architecture/clis/bq-assess/packaging/collector/: README.md  pyproject.toml
solution-architecture/clis/bq-assess/skills/bq-assess/: SKILL.md
solution-architecture/clis/bq-assess/skills/bq-assess/references/: iam-roles.md  sample-report.md  scoring-rules.md
solution-architecture/clis/bq-assess/skills/bq-assess/scripts/: preflight.sh
solution-architecture/clis/bq-assess/skills/bq-assess/templates/: config.yaml
solution-architecture/clis/bq-assess/src/bq_assess/: __init__.py  cli.py  collect_cli.py  collector.py  models.py  scanner.py
solution-architecture/clis/bq-assess/src/bq_assess/bundle/: __init__.py  loader.py  models.py  writer.py
solution-architecture/clis/bq-assess/src/bq_assess/core/: __init__.py  analyzer.py  cache.py  classifier.py  disclaimer.py  jobs_query.py  price_lookup.py  pricing.py  pricing_constants.py  region_mapping.py  relationships.py  scanner.py  sql_surface.py  storage_stats.py  workload.py
solution-architecture/clis/bq-assess/src/bq_assess/engine/: __init__.py
solution-architecture/clis/bq-assess/tests/: conftest.py
solution-architecture/clis/bq-assess/tests/integration/: test_bundle_round_trip.py  test_large_project_e2e.py  test_phase1_end_to_end.py
solution-architecture/clis/bq-assess/tests/plugin/: scoring_parity.py  smoke.sh  structure.sh
solution-architecture/clis/bq-assess/tests/property/: test_analyzer_properties.py  test_cache_properties.py  test_cli_properties.py  test_config_properties.py  test_converter_properties.py  test_cost_properties.py  test_placement_relationships_properties.py  test_pricing_properties.py  test_relationships_properties.py  test_report_properties.py  test_scanner_properties.py  test_scoring_anonymization_properties.py  test_strategies_smoke.py  test_workload_properties.py
solution-architecture/clis/bq-assess/tests/unit/: test_analyzer.py  test_bundle.py  test_cache.py  test_classifier.py  test_cli.py  test_complexity_scorer.py  test_cost.py  test_effort_scorer.py  test_html_writer.py  test_iceberg_converter.py  test_jobs_query.py  test_json_writer.py  test_placement.py  test_price_lookup.py  test_pricing.py  test_relationships.py  test_report_serialize.py  test_report_template.py  test_rewrite_guide.py  test_scanner.py  test_scanner_routines_and_failures.py  test_sql_surface.py  test_storage_stats.py  test_translate.py  test_workload.py
(+600 files in other folders)
